<resources>
    <string name="app_name">Calculadora</string>
    <string name="saludo">Hola Mundo</string>
    <string name="titulo">Calculadora</string>
    <string name="label_numero_uno">Digite número uno</string>
    <string name="label_numero_dos">Digite número dos</string>
    <string name="calcular">Calcular</string>
    <string name="btn_limpiar">Limpiar</string>
    <string name="suma">Suma</string>
    <string name="resta">Resta</string>
    <string name="multiplicacion">Multiplicación</string>
    <string name="division">División</string>
    <string-array name="operaciones">
        <item>@string/suma</item>
        <item>@string/resta</item>
        <item>@string/multiplicacion</item>
        <item>@string/division</item>
    </string-array>
    <string name="error_1">Digite el número uno</string>
    <string name="error_2">Digite el número dos</string>
    <string name="error_3">El denominador no puede ser cero</string>
</resources>
